@@ -1,3 +1,8 @@
+2000-02-02  Dan Espen  <dane@mk.telcordia.com>
+
+	* fvwm/module_interface.c (HandleModuleInput): Access module message
+	header fields as longs, for Tru64 UNIX.
+
 2000-02-02  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/style.c (ProcessNewStyle):
